# casino-simulator

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/source/: conf.py  index.rst  introduction.rst  roulette.rst
src/casino_simulator/: roulette.py
src/tests/: test_outcome.py
src/tests/roulette/: test_bin.py  test_wheel.py
