[tool.poetry]
name = "casino-simulator"
version = "0.1.0"
description = ""
authors = ["Juan Bernardo Benavides Rubio <juan.benavides@fintegra.co>"]
readme = "README.md"
packages = [{include = "casino_simulator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^6.1.3"
tox = "^4.2.7"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
