[tool.poetry]
name = "casino-simulator"
version = "0.1.0"
description = ""
authors = ["Juan Bernardo Benavides Rubio <juan.benavides@fintegra.co>"]
readme = "README.md"
packages = [{include = "casino_simulator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
sphinx = "^6.1.3"
tox = "^4.2.7"
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.991"
pre-commit = "^3.0.2"
flake8 = "^6.0.0"
flake8-bugbear = "^23.1.20"

[tool.isort]
profile = "black"
extra_standard_library = ["pytest"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
